[metadata]
name = pybench
summary = A benchmarking and performance analysis library
description-file =
    README.md
author = Pbench by Red Hat
maintainer = Pbench by Red Hat
home-page = https://github.com/distributed-system-analysis/pbench
classifier =
   Programming Language :: Python :: 3.6,
   License :: OSI Approved :: GNU General Public License v3 (GPLv3),
   Operating System :: OS Independent,

[files]
packages = pbench
scripts = 
  bin/pbench-test

[tools:pytest]
testpaths = pbench/test
