[metadata]
name = pybench
summary = A benchmarking and performance analysis library
description-file =
    README.md
author = Pbench by Red Hat
maintainer = Pbench by Red Hat
home-page = https://github.com/distributed-system-analysis/pbench
classifier =
   Programming Language :: Python :: 3.6,
   License :: OSI Approved :: GNU General Public License v3 (GPLv3),
   Operating System :: OS Independent,

[files]
packages = pbench
scripts = 
    bin/pbench-tool-trigger
    bin/pbench-tool-meister-stop
    bin/pbench-tool-meister-start
    bin/pbench-tool-meister-client
    bin/pbench-tool-meister
    bin/pbench-tool-data-sink
    bin/pbench-sysinfo-dump
    bin/pbench-remote-sysinfo-dump
    bin/pbench-register-tool-trigger
    bin/pbench-register-tool-set
    bin/pbench-register-tool
    bin/pbench-postprocess-tools-cdm
    bin/pbench-output-monitor
    bin/pbench-move-results
    bin/pbench-metadata-log
    bin/pbench-make-result-tb
    bin/pbench-log-timestamp
    bin/pbench-list-triggers
    bin/pbench-list-tools
    bin/pbench-import-cdm
    bin/pbench-get-primary-metric
    bin/pbench-get-metric-data
    bin/pbench-get-iteration-metrics
    bin/pbench-copy-result-tb
    bin/pbench-collect-sysinfo
    bin/pbench-clear-tools
    bin/pbench-cleanup
    bin/pbench-avg-stddev
    bin/pbench-agent-config-ssh-key
    bin/pbench-agent-config-activate
    bin/pbench-add-metalog-option
    bin/cdm-get-iterations

[entry_points]
console_scripts = 
  pbench-kill-tools = pbench.cli.postprocess:main
  pbench-start-tools = pbench.cli.postprocess:main
  pbench-stop-tools = pbench.cli.postprocess:main

[tools:pytest]
testpaths = pbench/test
